--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,6 +1,8 @@
 .nav {
     background-color: #f8f9fa;
+    max-width: max-content;
     padding: 10px 20px;
+    border-radius: 10px;
 }
 
 .list {
@@ -19,11 +21,11 @@
 }
 
 .link:hover {
-    color: #007bff;
+    color: #f6bb62;
 }
 
 .active {
-    color: #007bff;
+    color: #f6bb62;
     font-weight: 600;
-    border-bottom: 2px solid #007bff;
+    border-bottom: 2px solid #f6bb62;
 }
